# ai_python_interviewer

./: Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  template.env
.github/workflows/: deploy.yml
infrastructure/backups/: pgdb_s3.sh
src/: config.py  main.py
src/ai/: ai_interviewer.py  models.py
src/billing/: invoice.py
src/bot/: handlers.py  keyboards.py  states.py  utils.py
src/bot/bot_content/: basics.py  skills.py  texts.py
src/db/: db.py  migrate.py  models.py
src/db/cache/: cache.py
src/giga_chat/: giga_chat.py  models.py
src/health_check/: checker.py
src/tests/: conftest.py  test_db.py  test_sticker.py
